--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,10 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/payment_method_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="go to payment"/>
+
 </android.support.constraint.ConstraintLayout>
