--- a/app/src/main/res/layout/activity_select_payment.xml
+++ b/app/src/main/res/layout/activity_select_payment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.bountyhunter.kudo.kudoposretail.Activity.SelectPaymentActivity"
+    tools:context="com.bountyhunter.kudo.kudoposretail.activity.SelectPaymentActivity"
     android:paddingLeft="16dp"
     android:paddingRight="16dp">
 
