--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.bountyhunter.kudo.kudoposretail.LoginActivity">
+    tools:context="com.bountyhunter.kudo.kudoposretail.Activity.LoginActivity">
 
     <!-- Login progress -->
     <ProgressBar
@@ -19,12 +19,29 @@
         android:layout_marginBottom="8dp"
         android:visibility="gone" />
 
-    <ScrollView
+    <RelativeLayout
         android:id="@+id/login_form"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+
+
+        <TextView
+            android:id="@+id/title"
+            android:textSize="24sp"
+            android:text="MPOS"
+            android:layout_centerHorizontal="true"
+            android:typeface="monospace"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
 
         <LinearLayout
+            android:layout_below="@id/title"
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -35,10 +52,12 @@
                 android:layout_height="wrap_content">
 
                 <AutoCompleteTextView
+                    android:drawableLeft="@drawable/ic_person_black_18dp"
+                    android:drawablePadding="8dp"
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/prompt_email"
+                    android:hint="NO HP atau Email"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:singleLine="true" />
@@ -50,10 +69,12 @@
                 android:layout_height="wrap_content">
 
                 <EditText
+                    android:drawableLeft="@drawable/ic_lock_black_18dp"
+                    android:drawablePadding="8dp"
                     android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/prompt_password"
+                    android:hint="Password"
                     android:imeActionId="6"
                     android:imeActionLabel="@string/action_sign_in_short"
                     android:imeOptions="actionUnspecified"
@@ -69,9 +90,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@string/action_sign_in"
+                android:text="Login"
                 android:textStyle="bold" />
 
         </LinearLayout>
-    </ScrollView>
+
+        <TextView
+            android:layout_marginTop="24dp"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Not A Member Yet?"
+            android:layout_above="@id/textview_register"
+            />
+
+        <TextView
+            android:layout_centerHorizontal="true"
+            android:id="@+id/textview_register"
+            android:text="Register"
+            android:textColor="@color/secondary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"/>
+    </RelativeLayout>
 </LinearLayout>
