--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.bountyhunter.kudo.kudoposretail.Activity.CatalogActivity">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_products_catalog"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+
+
 </android.support.constraint.ConstraintLayout>
