--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.bountyhunter.kudo.kudoposretail.Activity.CatalogActivity">
+    tools:context="com.bountyhunter.kudo.kudoposretail.activity.CatalogActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_products_catalog"
