--- a/app/src/main/res/layout/list_item_product_catalog.xml
+++ b/app/src/main/res/layout/list_item_product_catalog.xml
@@ -5,17 +5,22 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.v7.widget.CardView
+        android:layout_margin="8dp"
+        android:elevation="2dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <RelativeLayout
-            android:layout_width="wrap_content"
+            android:padding="6dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <ImageView
+                android:layout_centerHorizontal="true"
                 android:layout_width="118dp"
                 android:layout_height="118dp"
-                android:id="@+id/product_image_iv"/>
+                android:id="@+id/product_image_iv"
+                android:layout_marginBottom="2dp"/>
 
             <TextView
                 android:layout_below="@id/product_image_iv"
