--- a/app/src/main/res/layout/activity_void.xml
+++ b/app/src/main/res/layout/activity_void.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context="com.bountyhunter.kudo.kudoposretail.Activity.VoidActivity">
+    tools:context="com.bountyhunter.kudo.kudoposretail.activity.VoidActivity">
 
     <EditText
         android:id="@+id/transaction_number_et"
