--- a/app/src/main/res/layout/activity_void.xml
+++ b/app/src/main/res/layout/activity_void.xml
@@ -6,25 +6,40 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     tools:context="com.bountyhunter.kudo.kudoposretail.activity.VoidActivity">
+    <ImageView
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/im_void_header"
+        />
 
     <EditText
+        style="@style/edittext_with_image"
         android:id="@+id/transaction_number_et"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="No. Transaksi"/>
+        android:layout_marginTop="16dp"
+        android:hint="No. Transaksi"
+        android:inputType="number"
+        android:drawableLeft="@drawable/ic_looks_one"
+        app:layout_constraintTop_toBottomOf="@id/header"
+        />
 
     <EditText
+        style="@style/edittext_with_image"
         android:id="@+id/pin_et"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
         android:hint="Verifikasi Password"
-        app:layout_constraintTop_toBottomOf="@id/transaction_number_et"/>
+        android:inputType="textPassword"
+        android:drawableLeft="@drawable/ic_lock_black_18dp"
+        app:layout_constraintTop_toBottomOf="@id/transaction_number_et"
+        />
 
     <Button
         android:id="@+id/void_button"
-        android:layout_width="wrap_content"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/im_button_blue"
         android:text="Batalkan"
+        android:textColor="@color/white"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
